# VoiceInCase

./: .gitignore  agent.md
invoice-incase/: FlowChart.excalidraw
invoice-incase/docs/: INCASE_STYLE_GUIDE.md  TechStackUpdate.md  data-structure-improvement.md  project-overview.md
invoice-incase/pdr-v2.0.x/: ivic-v2-srs.tex
invoice-incase/pdr-v2.1.x/: ivic-v2.1-pdr.tex
ivic_app/: README.md  index.html  ocr_requirements.txt  package-lock.json  package.json  vite.config.ts
ivic_app/.cargo/: config.toml
ivic_app/docs/: implementation-checklist.md
ivic_app/ocr_lab/: README.md
ivic_app/packaging/dotnet-installer/: InVoiceInCase.Setup.csproj  Program.cs
ivic_app/packaging/iexpress/: install.bat  ivic-iexpress.sed  uninstall.bat
ivic_app/scripts/: ocr_regression.py  prepare_ocr_runtime.ps1
ivic_app/src/: main.tsx
ivic_app/src-tauri/: Cargo.toml  tauri.conf.json
ivic_app/src-tauri/python/: ivic_invoice_layout.py
ivic_app/src-tauri/python/ivic_ocr/: __init__.py  service.py  worker.py
ivic_app/src-tauri/resources/ocr/: README.md
ivic_app/src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs
ivic_app/src-tauri/src/commands/: loaders.rs  mod.rs
ivic_app/src-tauri/src/db/: migrations.rs  mod.rs
ivic_app/src-tauri/src/domain/: mod.rs
ivic_app/src-tauri/src/files/: mod.rs
ivic_app/src/app/: App.tsx  routes.ts  sampleData.ts
ivic_app/src/services/: ivicService.ts
ivic_app/src/styles/: global.css  layout.css  pages.css  responsive.css  theme.css  tokens.css  workflows.css
ivic_app/src/types/: domain.ts
ivic_app/src/utils/: format.ts  (+2 more)
(+22 files in other folders)
