[package]
name = "ivic-app"
version = "2.1.0"
description = "InVoice InCase v2.1 local desktop invoice workbench"
authors = ["InVoice InCase Project"]
edition = "2021"

[lib]
name = "ivic_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
